add_executable(testFileReader)
target_sources(testFileReader PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testFileReader.cpp)
target_link_libraries(testFileReader PRIVATE core)
add_test(NAME Test-File-Reader COMMAND testFileReader)
add_dependencies(all_tests testFileReader)

add_executable(testBitReader)
target_sources(testBitReader PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testBitReader.cpp)
target_link_libraries(testBitReader PRIVATE core)
add_test(NAME Test-Bit-Reader COMMAND testBitReader)
add_dependencies(all_tests testBitReader)

add_executable(testBitStringFinder)
target_sources(testBitStringFinder PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testBitStringFinder.cpp)
target_link_libraries(testBitStringFinder PRIVATE core)
add_test(NAME Test-Bit-String-Finder COMMAND testBitStringFinder)
add_dependencies(all_tests testBitStringFinder)

add_executable(testCache)
target_sources(testCache PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testCache.cpp)
target_link_libraries(testCache PRIVATE core)
add_test(NAME Test-Cache COMMAND testCache)
add_dependencies(all_tests testCache)

add_executable(testCommon)
target_sources(testCommon PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testCommon.cpp)
target_link_libraries(testCommon PRIVATE core)
add_test(NAME Test-Common COMMAND testCommon)
add_dependencies(all_tests testCommon)

add_executable(testParallelBitStringFinder)
target_sources(testParallelBitStringFinder PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testParallelBitStringFinder.cpp)
target_link_libraries(testParallelBitStringFinder PRIVATE core)
add_test(NAME Test-Parallel-Bit-String-Finder COMMAND testParallelBitStringFinder)
add_dependencies(all_tests testParallelBitStringFinder)

add_executable(testThreadPool)
target_sources(testThreadPool PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testThreadPool.cpp)
target_link_libraries(testThreadPool PRIVATE core)
add_test(NAME Test-Thread-Pool COMMAND testThreadPool)
add_dependencies(all_tests testThreadPool)

add_executable(testPrefetcher)
target_sources(testPrefetcher PRIVATE ${CMAKE_CURRENT_LIST_DIR}/testPrefetcher.cpp)
target_link_libraries(testPrefetcher PRIVATE core)
add_test(NAME Test-Prefetcher COMMAND testPrefetcher)
add_dependencies(all_tests testPrefetcher)
